feat: Добавлены сессии fix: Изменены тесты для регистрации improve: Изменена логика функции writeJSON()
[feat] Написать бекэнд для страницы каталог товаров

беккенд для страницы каталог товаров

[fix[ go mode and add catalog part
