# docs/swagger.yaml
@@ -1,5 +1,27 @@
 basePath: /
 definitions:
+  db.Product:
+    properties:
+      currency:
+        description: Поле не обязательно
+        type: string
+      currentPrice:
+        type: string
+      description:
+        type: string
+      discount:
+        description: Поле не обязательно
+        type: string
+      image:
+        type: string
+      oldPrice:
+        description: Поле не обязательно
+        type: string
+      shortDescription:
+        type: string
+      url:
+        type: string
+    type: object
   db.User:
     properties:
       password:
@@ -28,7 +50,54 @@ info:
   contact: {}
   description: This is simple oxic server
   title: Swagger Oxic API
+  version: "1.0"
 paths:
+  /catalog/product/{id}:
+    get:
+      description: Возвращает продукт по его ID
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Product'
+        "404":
+          description: Продукт не найден
+          schema:
+            type: string
+        "500":
+          description: Ошибка при кодировании JSON
+          schema:
+            type: string
+      summary: Get Product by ID
+      tags:
+      - Products
+  /catalog/products:
+    get:
+      description: Возвращает список всех продуктов
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              $ref: '#/definitions/db.Product'
+            type: object
+        "500":
+          description: Ошибка при кодировании JSON
+          schema:
+            type: string
+      summary: Get Products
+      tags:
+      - Products
   /login:
     post:
       consumes:
